добавлена логика просмотра результатов теста
