# internal/dto/test_dto/test.go
@@ -7,25 +7,6 @@ import (
 	"github.com/google/uuid"
 )
 
-type MyTestResultDto struct {
-	Question          QuestionDto `json:"question"`
-	SelectedAnswerIds []string    `json:"selected_answer_ids"`
-}
-
-type UserTestResultDto struct {
-	User     dto.UserMiniDto  `json:"user"`
-	Attempts []TestAttemptDto `json:"attempts"`
-}
-
-type TestAttemptDto struct {
-	CorrectCount int `json:"correct_count"`
-	TotalCount   int `json:"total_count"`
-}
-
-type TestReportDto struct {
-	DownloadURL string `json:"download_url"`
-}
-
 type TestDto struct {
 	ID             uuid.UUID           `json:"id"`
 	Name           string              `json:"name"`
@@ -77,68 +58,6 @@ type DeleteTestDto struct {
 	ID uuid.UUID `json:"id"`
 }
 
-type QuestionDto struct {
-	ID          uuid.UUID           `json:"id"`
-	Text        string              `json:"text"`
-	Type        string              `json:"type"`
-	EventID     uuid.UUID           `json:"event_id"`
-	Order       int                 `json:"order"`
-	Attachments []dto.AttachmentDto `json:"attachments"`
-	Answers     []AnswerDto         `json:"answers"`
-}
-
-type AddQuestionDto struct {
-	Text  string `json:"text"`
-	Type  string `json:"type"`
-	Order int    `json:"order"`
-}
-
-type AnswerDto struct {
-	ID         uuid.UUID `json:"id"`
-	QuestionID uuid.UUID `json:"question_id"`
-	Text       string    `json:"text"`
-	IsCorrect  bool      `json:"is_correct"`
-	Points     int       `json:"points"`
-}
-
-type AddAnswerDto struct {
-	Text      string `json:"text"`
-	IsCorrect bool   `json:"is_correct"`
-	Points    int    `json:"points"`
-}
-
-type SetAnswerDto struct {
-	UserID    uuid.UUID  `json:"-"`
-	AttemptID *uuid.UUID `json:"attempt_id"`
-	AnswerID  *uuid.UUID `json:"answer_id"`
-	Text      *string    `json:"text"`
-}
-
-type UserAttemptDto struct {
-	ID            uuid.UUID `json:"id"`
-	AttemptNumber int       `json:"attempt_number"`
-	Points        int       `json:"points"`
-	OrderNumber   int       `json:"order_number"`
-}
-
-type UserAttemptCreatedDto struct {
-	ID            uuid.UUID `json:"id"`
-	AttemptNumber int       `json:"attempt_number"`
-	Started       time.Time `json:"started"`
-}
-
-type UpdateAnswerDto struct {
-	UserID    uuid.UUID  `json:"-"`
-	AttemptID *uuid.UUID `json:"attempt_id"`
-	AnswerID  *uuid.UUID `json:"answer_id"`
-	Text      *string    `json:"text"`
-}
-
-type UserAnswerDto struct {
-	ID         uuid.UUID  `json:"id"`
-	UserID     uuid.UUID  `json:"user_id"`
-	QuestionID uuid.UUID  `json:"question_id"`
-	AnswerID   *uuid.UUID `json:"answer_id"`
-	Text       *string    `json:"text"`
-	Points     int        `json:"points"`
+type TestReportDto struct {
+	DownloadURL string `json:"download_url"`
 }
